LP-008 Portfolio section

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -1,3 +1,19 @@
+body {
+    color: #333;
+    font: 1.2rem;
+    line-height: 1.6em;
+    margin: 0;
+}
+
+h1 {
+    font-size: 2rem;
+    line-height: 1.3em;
+}
+
+p {
+    margin: 1.6em;
+}
+
 .container {
     width: 85%;
     max-width: 850px;
@@ -80,6 +96,127 @@
     background: #333;
 }
 
+.about {
+    background-color: #ECE7E7;
+    color: black;
+    height: 100vh;
+}
+
+.about-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.about-data {
+    display: flex;
+    justify-content: space-around;
+    max-width: 1000px;
+}
+
+.about-datam {
+    flex-direction: column;
+    font-size: 1.3em;
+    padding: 1em;
+}
+
+.about-button {
+    flex-direction: column;
+    margin: 2.5em;
+}
+
+.button {
+    background-color: rgb(65, 65, 65);
+    border-color: rgb(65, 65, 65);
+    color: #ECE7E7;
+    font-size: 1.15em;
+    width: 220px;
+    height: 55px;
+}
+
+.button:hover {
+    background-color: hsl(278, 90%, 46%);
+    border-color: hsl(278, 90%, 46%);
+    color: #fff
+}
+
+.contact-button {
+    background-color: rgb(65, 65, 65);
+    border-color: rgb(65, 65, 65);
+    color: #ECE7E7;
+}
+
+.contact-button:hover {
+    background-color: hsl(278, 90%, 46%);
+    border-color: hsl(278, 90%, 46%);
+    color: #fff
+}
+
+footer {
+    width: 100%;
+    background: #202020;
+    color: white;
+}
+
+.container-footer-all {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.container-body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.column1 {
+    max-width: 400px;
+}
+
+.column1 h1 {
+    font-size: 22px;
+}
+
+.column1 p {
+    font-size: 14px;
+    color: #c7c7c7;
+    margin-top: 20px;
+}
+
+.column2 {
+    max-width: 400px;
+}
+
+.column2 h1 {
+    font-size: 22px;
+    margin-right: 15px;
+}
+
+.row label {
+    margin-top: 10px;
+    margin-left: 20px;
+    color: #c7c7c7;
+    font-size: 15px;
+}
+
+.column3 {
+    max-width: 400px;
+}
+
+.column3 h1 {
+    font-size: 22px;
+}
+
+.column3 p {
+    font-size: 14px;
+    color: #c7c7c7;
+    margin-top: 20px;
+}
+
+.container-footer {
+    background: #c2c2c2;
+    text-align: center;
+}
+
 @media only screen and (max-width: 767px) {
     .menu-icon {
         display: block;
@@ -127,41 +264,110 @@
     .container-section1 img {
         width: 150px;
     }
-    .about {
-        background-color: #ECE7E7;
-        color: rgb(65, 65, 65);
-        height: 100vh;
-    }
-    .about-text {
-        display: flex;
-        flex-direction: column;
-    }
-    .about-data {
-        display: flex;
-        flex-direction: column;
-        max-width: 550px;
-    }
-    .about-datam {
-        font-size: 1.10em;
-        padding: 1em;
-    }
-    .about-button {
-        flex-direction: column;
-        margin: 1em;
-    }
-    .button {
-        background-color: rgb(65, 65, 65);
-        border-color: rgb(65, 65, 65);
-        color: #ECE7E7;
-        font-size: 1.15em;
-        width: 220px;
-        height: 55px;
-    }
-    .button:hover {
-        background-color: hsl(278, 90%, 46%);
-        border-color: hsl(278, 90%, 46%);
-        color: #fff
-    }
+}
+
+
+/*Section types*/
+
+#types-section,
+#contact-section,
+#about-section {
+    padding: 4.8rem 0;
+}
+
+#types-section .types-title-box {
+    margin: 0 0 50px;
+}
+
+#types-section .types-item {
+    cursor: pointer;
+    position: relative;
+    display: block;
+    height: 200px;
+    width: 200px;
+    margin-bottom: 30px;
+    border-radius: 1.2rem;
+    overflow: hidden;
+}
+
+#types-section .types-item .types-item-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .2s ease-out;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.91);
+}
+
+#types-section .types-item .types-item-box h3,
+.modal-body h2 {
+    font-family: 'Fantasy';
+}
+
+#types-section .types-item .types-item-box:hover {
+    opacity: 1;
+}
+
+#types-section .types-img {
+    width: 100%;
+    height: 100% !important;
+    object-fit: cover;
+}
+
+.color-white {
+    color: white !important;
+}
+
+.text-center {
+    text-align: center!important;
+}
+
+.closeButton1 {
+    padding: 20px;
+}
+
+div.closeButton1 button {
+    font-size: xx-large;
+}
+
+div.closeButton2 button {
+    font-family: 'Fanstasy';
+}
+
+div.closeButton2 button:hover,
+div.closeButton2 button:visited,
+div.closeButton2 button:active {
+    color: #fff;
+    background-color: hsl(278, 90%, 46%);
+    border-color: hsl(278, 90%, 46%);
+}
+
+div.closeButton2 button span {
+    margin: 5px;
+}
+
+div.modal-body {
+    text-align: center;
+}
+
+.modal-body .container {
+    margin: auto;
+    max-width: 30%;
+}
+
+div.modal-body img {
+    border-radius: .7rem !important;
+    width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+div.modal-body .modal-title {
+    font-family: 'Fantasy';
+}
+
+img {
+    width: 200px;
 }
 
 
