--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,23 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    font-family: georgia, 'Times New Roman', Times, serif;
+    color: 333;
+    font-size: 1.3rem;
+    line-height: 1.3em;
+    margin: 0;
+}
+
+h1 {
+    font-size: 2rem;
+    line-height: 1.3em;
+}
+
+p {
+    margin: 1.6em;
+}
+
 .container {
     width: 85%;
     max-width: 850px;
@@ -66,7 +83,21 @@ html {
     background: #4a4a4a;
 }
 
+.main {
+    padding-top: 12rem;
+}
+
 @media only screen and (max-width: 767px) {
+    .menu-icon {
+        display: block;
+        cursor: pointer;
+        padding: 0.5rem 1rem;
+        transition: all 0.4s linear;
+        border-radius: 5px;
+    }
+    .menu-icon:hover {
+        background: #4a4a4a;
+    }
     .navigation {
         width: 100%;
         margin-top: 1rem;
